    keeping only time periods shared among all individuals ("shared").
  * pbsytest: issue warning when applied to an unbalanced model (unbalanced tests still in preparation).
  * print.summary.plm: for "between" models: print the no. of obs used in estimation
    (like for "fd" models since 1.5-24).
  * pcdtest:
      * returned htest object has correct data.name value now.
      * NaN stemming from non-intersecting pairs of individuals avoided by omission from calculation.
      * pcdtest(some_var ~ 1, data) does not error anymore.
  * NEWS file: order of entries changed: latest entries now at top of file.


Changes since version 1.5-35

  * pbltest.plm: plm interface now respects the 'alternative' argument.
  * summary.plm: summary.plm objects gained new component 'df' to mimic summary.lm objects more closely.
  * gettvalue() added as (internal) function to quickly extract one or more t values from an estimated model
    (so one can avoid a call to summary() with all the other unnecessary computations).


Changes since version 1.5-34

  * Ftest: support for vcovs from package clubSandwich to allow df2 adjustment in robust F test
           (new func trans_clubSandwich_vcov added for this purpose).
  * (internal) model.matrix.pFormula: case "pooling" added to twoways/unbalanced condition;
                                      for unknown cases, give meaningful error.
  * alias.plm, alias.pFormula added: complements the generic stats::alias to detect linear 
                                     dependence (much like detect_lin_dep).
  * detect_lin_dep.plm added.
  * plm objects gained element 'aliased' (a named logical) to indicate any aliased coefficients that are 
    silently dropped during estimation by plm (cf. summary.lm objects).
  * fix: vcovXX.plm / vcovG framework now handle plm models with aliased coefficients (linear dependent columns
    in model matrix).
  * phtest: better support for between models in phtest;