@@ -1,8 +1,8 @@
 ## tests for pcdtest
 
-
-## test pcdtest for NaN value in result (due to non-intersecting pairs)
-## fixed in rev. 339
+## test pcdtest for NaN value in result
+##  * due to non-intersecting pairs, fixed in rev. 339
+##  * due to only ony period in intersection, fixed in rev. 345
 
 library(plm)
 data("Grunfeld", package = "plm")
@@ -25,16 +25,31 @@ if (is.nan(testres2$statistic)) stop("statistic is NaN")
 if (is.na(testres2$statistic)) stop("statistic is NA")
 if (is.na(testres2$p.value)) stop("p-value is NA")
 
-## make it also unbalanced for other individuals
-Grunfeld_no_intersect_unbal <- Grunfeld_no_intersect[-c(65:66, 71, 103:110), ]
-mod_pool_no_intersect_unbal <- plm(inv ~ value + capital, data = Grunfeld_no_intersect_unbal, model = "pooling")
-testres3 <- pcdtest(mod_pool_no_intersect_unbal, test = "cd")
+
+## fixed in rev. 345
+## only 1 intersection for firm 1 and 2:
+# firm 1 years: 1935 to 1945
+# firm 2 years: 1945 to 1954
+Grunfeld_one_intersect <- Grunfeld[-c(12:20, 20:30), ]
+mod_pool_one_intersect <- plm(inv ~ value + capital, data = Grunfeld_one_intersect, model = "pooling")
+testres3 <- pcdtest(mod_pool_one_intersect, test = "cd")
+
 if (is.nan(testres3$statistic)) stop("statistic is NaN")
 if (is.na(testres3$statistic)) stop("statistic is NA")
 if (is.na(testres3$p.value)) stop("p-value is NA")
 
 
+## make it also unbalanced for other individuals
+Grunfeld_no_intersect_unbal <- Grunfeld_no_intersect[-c(65:66, 71, 103:110), ]
+mod_pool_no_intersect_unbal <- plm(inv ~ value + capital, data = Grunfeld_no_intersect_unbal, model = "pooling")
+testres4 <- pcdtest(mod_pool_no_intersect_unbal, test = "cd")
+if (is.nan(testres4$statistic)) stop("statistic is NaN")
+if (is.na(testres4$statistic)) stop("statistic is NA")
+if (is.na(testres4$p.value)) stop("p-value is NA")
+
+
 ## test case for regression of variable on constant
-## (resulted in error pre rev. 342:
+## resulted in error pre rev. 342:
 ## "Error in lm.fit(tX, ty) : 'x' must be a matrix"
 pcdtest(value ~ 1, data = Grunfeld)
+
